# nanoUNet

./: .gitignore  README.md  dataset.json  mem_diag_worker_0.jsonl  method.tex  plan.md  pyproject.toml
.claude/: settings.local.json
.codex/: hooks.json
.cursor/plans/: fix_oom.md  fix_oom_2.md  nanounet_build_plan_c5ecefa8.plan.md  nanounet_mae_pretraining_ddb1f310.plan.md  nanounet_standalone_port_4edf627b.plan.md
.cursor/rules/: nanochat-style.mdc
arXiv-2605.23118v1/: 00README.json  main.bib  main.tex
configs/: default.json  finetune_d013.json
docs/: cgroup_memory.md  handoff_preprocess_d113_registered.md  index.md  longi_inference.md  longi_registration_backfill_2026-07-03.md  longi_registration_landmark_align_plan.md  longi_registration_refine_plan.md  longitudinal_dwb_design.md  losses.md  mae_oom_handoff.md  patch_size.md  session_2026-06-25_inference_optimization.md
eval/: eval_longi_fu_dice.py
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
nanounet/: __init__.py  common.py  config.py  dataloader_prefs.py  lightning_ckpt.py  mem_diag.py  runtime.py
scripts/: export_d115_viewer_bundle.py  slurm_nanounet_finetune_d013_longi.sh  slurm_nanounet_finetune_d013_registered.sh  slurm_nanounet_finetune_d114_registered.sh  slurm_nanounet_preprocess_d013_registered.sh  slurm_nanounet_preprocess_d113_registered.sh  slurm_nanounet_preprocess_merge_999.sh  slurm_nanounet_register_longi.sh  slurm_nanounet_sup_999_overlap.sh  slurm_nanounet_sup_999_scratch_xl_dcce_1000it.sh  slurm_nanounet_train_mae_999.sh
(+120 files in other folders)
